Fix imgui ASAN, again.

--- a/ports/imgui/CMakeLists.txt
+++ b/ports/imgui/CMakeLists.txt
@@ -9,13 +9,13 @@ if(APPLE)
 endif()
 
 # Enable ASAN
-add_compile_options($<$<BOOL:${ENABLE_SANITIZERS}>>:-fsanitize=address>)
-add_link_options($<$<BOOL:${ENABLE_SANITIZERS}>>:-fsanitize=address>)
+add_compile_options($<$<BOOL:${ENABLE_SANITIZERS}>:-fsanitize=address>)
+add_link_options($<$<BOOL:${ENABLE_SANITIZERS}>:-fsanitize=address>)
 
 # undefined behavior sanitizer is not available on MSVC
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-    add_compile_options("$<$<BOOL:${ENABLE_SANITIZERS}>>:-fno-omit-frame-pointer;-fsanitize=undefined>")
-    add_link_options("$<$<BOOL:${ENABLE_SANITIZERS}>>:-fno-omit-frame-pointer;-fsanitize=undefined>")
+    add_compile_options("$<$<BOOL:${ENABLE_SANITIZERS}>:-fno-omit-frame-pointer;-fsanitize=undefined>")
+    add_link_options("$<$<BOOL:${ENABLE_SANITIZERS}>:-fno-omit-frame-pointer;-fsanitize=undefined>")
 endif ()
 
 add_library(${PROJECT_NAME} "")
